# libfms

./: CMakeLists.txt  NOTES.md  README.md  appveyor.yml
include/: ensure.h
include/template/: README.md  template.h
src/: CMakeLists.txt
src/enumerator/: README.md  enumerator.h  enumerator.t.cpp
src/prob/: CMakeLists.txt  prob.cpp  prob.h  prob_normal.h
src/prob/test/: CMakeLists.txt  test_prob.cpp  test_prob_normal.h
src/root/: root.h  root1d.h
src/template/: CMakeLists.txt  template.cpp  template.h
src/template/test/: CMakeLists.txt  test_template.cpp
